--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "assert": "^2.0.0",
     "expo": "^33.0.0",
     "expo-asset": "^7.0.0",
     "expo-linear-gradient": "~5.0.1",
