--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "firebase": "^7.0.0",
     "react": "16.8.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-location-view": "^0.2.1",
+    "react-native-maps": "0.26.1",
     "react-native-slider": "^0.11.0",
-    "react-native-vector-icons": "^6.4.2",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.6.1"
   },
   "devDependencies": {
